--- a/.github/workflows/build-tauri.yml
+++ b/.github/workflows/build-tauri.yml
@@ -409,7 +409,9 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: courseware-windows
-          path: "src-tauri/target/release/bundle/msi/*.msi"
+          path: |
+            src-tauri/target/release/bundle/msi/*.msi
+            src-tauri/target/release/bundle/nsis/*.exe
           if-no-files-found: warn
 
   build-linux:
